# libaditof

./: .clangformatignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  adsd__errs_8h_source.html  annotated.html  azure-pipelines.yml  camera_8h_source.html  camera__definitions_8h_source.html  classaditof_1_1_a_d_s_d_errors-members.html  classaditof_1_1_a_d_s_d_errors.html  classaditof_1_1_camera-members.html  classaditof_1_1_camera.html  classaditof_1_1_depth_sensor_interface-members.html  classaditof_1_1_depth_sensor_interface.html  classaditof_1_1_frame-members.html  classaditof_1_1_frame.html  classaditof_1_1_frame_handler-members.html  classaditof_1_1_frame_handler.html  classaditof_1_1_sensor_enumerator_factory-members.html  classaditof_1_1_sensor_enumerator_factory.html  classaditof_1_1_sensor_enumerator_interface.html  classaditof_1_1_system.html  classes.html  connections_8h_source.html  depth__sensor__interface_8h_source.html  frame_8h_source.html  frame__definitions_8h_source.html  frame__handler_8h_source.html  frame__operations_8h_source.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  (+30 more)
bindings/python/: CMakeLists.txt  aditofpython.cpp  readme.md
cmake/: aditof-config.cmake.in  readme.md  (+1 more)
dependencies/: CMakeLists.txt
dependencies/adi/network_discovery/: CMakeLists.txt  config.example.json  discovery_client.cpp  discovery_client.h  discovery_server.cpp  discovery_server.h  network_utils.cpp  network_utils.h  platform.cpp  platform.h  protocol.cpp  protocol.h
sdk/: CMakeLists.txt  readme.md
sdk/common/adi/depth-compute-opensource/: CMakeLists.txt
sdk/common/adi/depth-compute-opensource/src/: tofiCompute.cpp  tofiConfig.cpp
sdk/common/adi/tofi/: algorithms.cpp  algorithms.h  floatTolin.h  opencv_undistort.cpp  opencv_undistort.h  tofi_camera_intrinsics.h  tofi_compute.h  tofi_config.h  tofi_error.h  tofi_util.c  tofi_util.h
sdk/include/aditof/: aditof.h  adsd3500_hardware_interface.h  adsd_errs.h  ar0234_sensor.h  camera.h  camera_definitions.h  connections.h  depth_sensor_interface.h  frame.h  frame_definitions.h  frame_handler.h  frame_operations.h  log.h  playback_interface.h  recordable_interface.h  sdk_exports.h  sensor_definitions.h  sensor_enumerator_factory.h  sensor_enumerator_interface.h  status_definitions.h  stb_image_write.h  system.h  utils.h  version-kit.h
sdk/src/: frame.cpp  frame_handler.cpp  frame_handler_impl.h  frame_impl.h  frame_operations.cpp  readme.md  sensor_enumerator_factory.cpp  status_definitions.cpp  system.cpp  system_impl.cpp  system_impl.h  utils.cpp  utils_ini.cpp  utils_ini.h
sdk/src/cameras/itof-camera/: aditof_common.h  adsd3500_controller.cpp  adsd3500_controller.h  adsd3500_registers.h  calibration_manager.cpp  calibration_manager.h  camera_configuration.cpp  camera_configuration.h  camera_firmware_manager.cpp  camera_firmware_manager.h  camera_frame_acquisition_manager.cpp  camera_initialization_manager.cpp  camera_initialization_manager.h  camera_itof.cpp  camera_itof.h  depth_parameter_mapper.cpp  recording_manager.cpp  sensor_config_helper.cpp  sensor_config_helper.h
sdk/src/cameras/itof-camera/config/: config_adsd3500_adsd3100.json
sdk/src/cameras/itof-camera/hardware/: adsd3500_registers.h
sdk/src/cameras/itof-camera/helpers/: depth_parameter_mapper.h  sensor_config_helper.cpp
sdk/src/cameras/itof-camera/managers/: adsd3500_controller.cpp  adsd3500_controller.h  calibration_manager.cpp  calibration_manager.h  camera_firmware_manager.cpp  camera_firmware_manager.h  camera_frame_acquisition_manager.h  camera_initialization_manager.cpp  camera_initialization_manager.h  recording_manager.cpp  recording_manager.h
sdk/src/cameras/itof-frame/: frame_handler_impl.cpp  frame_impl.cpp
sdk/src/connections/network/: buffer.proto  network.cpp  network.h  network_depth_sensor.cpp  network_depth_sensor.h  network_sensor_enumerator.cpp  network_sensor_enumerator.h
sdk/src/connections/offline/: offline_depth_sensor.cpp  offline_depth_sensor.h  offline_sensor_enumerator.cpp  offline_sensor_enumerator.h
sdk/src/connections/usb/: usb_depth_sensor.h
sdk/src/platform/: README.md  platform.cmake  platform_config.h.in  platform_factory.cpp  platform_factory.h  platform_impl.cpp  platform_impl.h  platform_interface.h  sensor_enumerator.cpp  sensor_enumerator.h
sdk/src/platform/imx/: imx_platform.cpp  imx_platform.h
sdk/src/platform/nvidia/: nvidia_platform.cpp  nvidia_platform.h
sdk/src/platform/raspberrypi/: rpi_media_config.cpp  rpi_media_config.h  rpi_platform.cpp  rpi_platform.h
tests/python/: CMakeLists.txt  PYTHON_TESTING_SETUP.md  PYTHON_TESTS_SETUP.md  README.md  conftest.py  requirements.txt  run_python_tests.sh  setup_python_test_env.sh  test_aditof_bindings.py
tests/sdk/: CMakeLists.txt  README.md
tests/sdk/camera/: CMakeLists.txt  camera-adsd3500Reset.cpp  camera-adsd3500_reset.cpp  camera-adsd3500_reset_enhanced.cpp  camera-adsd3500_soft_reset.cpp  camera-api_test.cpp  camera-functional_test.cpp  camera-get_frames.cpp  camera-get_frames_test.cpp  camera-parameters.cpp  crosby_mode_get_frames.cpp  mock_depth_sensor.h
tests/sdk/camera/data/camera-parameters/: depth_params_crosby.json
tests/sdk/definitions/: definitions-test.cpp
tests/sdk/frame/: frame-operations_test.cpp
tests/sdk/generic/: CMakeLists.txt  generic-frame_api_test.cpp  generic-frame_boundary_test.cpp  generic-frame_unit_test.cpp  generic-sdk_source_integration_test.cpp  generic-sdk_version_test.cpp  generic-status_api_test.cpp  generic-utils_api_test.cpp
tests/sdk/include/: aditof_test_utils.h
tests/sdk/platform/: platform-security_test.cpp
tests/sdk/sample/: CMakeLists.txt  sample_test.cpp
tests/sdk/src/: aditof_test_utils.cpp
tests/sdk/system/: CMakeLists.txt  system-adsd3500_integration_test.cpp  system-connection_types_test.cpp  system-e2e_workflow_test.cpp  system-frame_data_pipeline_test.cpp  system-frame_handler_test.cpp  system-get_camera_list.cpp  system-integration_test.cpp
(+73 files in other folders)
